# tictac

./: .gitignore  .travis.yml  AUTHORS.md  README.md  app  com.github.ennernst.tictac.json  meson.build
data/: com.github.ennernst.tictac.appdata.xml  com.github.ennernst.tictac.desktop  com.github.ennernst.tictac.gresource.xml  com.github.ennernst.tictac.gschema.xml  meson.build
data/css/: style.css
debian/: changelog  control  copyright  rules
po/: com.github.ennernst.tictac.pot
src/: Application.vala  Main.vala  Window.vala  meson.build
src/configs/: Constants.vala  Settings.vala
src/controllers/: AppController.vala  GameAI.vala  GameBoard.vala
src/views/: AppView.vala
src/widgets/: HeaderBar.vala
tests/: assert.vala  test.vala
