sources += files(
    'configs/Constants.vala',
    'configs/Settings.vala',
    
    'controllers/AppController.vala',
    'controllers/GameAI.vala',
    'controllers/GameBoard.vala',
    'views/AppView.vala',

    'widgets/HeaderBar.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)
